docs/api/qiskit/0.19/qiskit.ignis.logging.IgnisLogging.mdx
---
title: IgnisLogging (v0.19)
description: API reference for qiskit.ignis.logging.IgnisLogging in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.ignis.logging.IgnisLogging
---

# IgnisLogging

<Class id="qiskit.ignis.logging.IgnisLogging" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/logging/ignis_logging.py" signature="IgnisLogging" modifiers="class">
  Singleton class to configure file logging via IgnisLogger

  Logging to file is enabled only if there is a config file present. Otherwise IgnisLogger will behave as a regular logger.

  Config file is assumed to be in \<user home>/.qiskit/logging.yaml

  **Config file fields:**

  file\_logging: \{true/false} - Specifies whether file logging is enabled

  log\_file: \<path> - path to the log file. If not specified, ignis.log will be used

  max\_size: \<# bytes> - maximum size limit for a given log file. If not specified file size is unlimited

  max\_rotations: \<count> - maximum number of log files to rotate (oldest file is deleted in case count is reached)

  ## Methods

  <span id="ignislogging-default-datetime-fmt" />

  ### default\_datetime\_fmt

  <Function id="qiskit.ignis.logging.IgnisLogging.default_datetime_fmt" signature="IgnisLogging.default_datetime_fmt()">
    Get the default date time format used for writing log entries

    **Return type**

    `str`

    **Returns**

    Default date time format
  </Function>

  <span id="ignislogging-get-file-handler" />

  ### get\_file\_handler

  <Function id="qiskit.ignis.logging.IgnisLogging.get_file_handler" signature="IgnisLogging.get_file_handler()">
    Configure and retrieve the RotatingFileHandler object. Called on demand the first time IgnisLoggers needs to write to a file

    **Returns**

    The configured RotatingFileHandler object

    **Return type**

    RotatingFileHandler
  </Function>

  <span id="ignislogging-get-log-file" />

  ### get\_log\_file

  <Function id="qiskit.ignis.logging.IgnisLogging.get_log_file" signature="IgnisLogging.get_log_file()">
    Get the name of the log file

    **Return type**

    `str`

    **Returns**

    Name of the log file
  </Function>

  <span id="ignislogging-get-logger" />

  ### get\_logger

  <Function id="qiskit.ignis.logging.IgnisLogging.get_logger" signature="IgnisLogging.get_logger(name)">
    Return an IgnisLogger object

    To be used in by the code which needs logging.

    **Parameters**

    **name** (`str`) – Name of the module being logged

    **Return type**

    [`IgnisLogger`](qiskit.ignis.logging.IgnisLogger "qiskit.ignis.logging.ignis_logging.IgnisLogger")

    **Returns**

    An IgnisLogger object
  </Function>
</Class>

